[package]
name = "ht16k33"
version = "0.2.0"
authors = ["Jason Peacock <jason@jasonpeacock.com>"]
description = "Rust driver for the Holtek HT16K33 'RAM Mapping 16*8 LED Controller Driver with keyscan'"
keywords = ["led", "driver", "display", "embedded-hal"]
categories = ["hardware-support"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasonpeacock/ht16k33"
readme = "README.md"
documentation = "https://docs.rs/ht16k33"

[badges]
is-it-maintained-issue-resolution = { repository = "jasonpeacock/ht16k33" }
is-it-maintained-open-issues = { repository = "jasonpeacock/ht16k33" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "jasonpeacock/ht16k33", branch = "master" }

[dependencies]
embedded-hal       = "0.2.2"
slog               = {version = "2.4.1", features = ["max_level_trace"]}
slog-stdlog        = "3.0.4-pre"

[dev-dependencies]
embedded-hal-mock  = "0.4.0"
