[package]
edition = "2018"
name = "ht16k33"
version = "0.4.0"
authors = ["Jason Peacock <jason@jasonpeacock.com>"]
description = "Rust driver for the Holtek HT16K33 'RAM Mapping 16*8 LED Controller Driver with keyscan'"
keywords = ["no-std", "led", "driver", "display", "embedded-hal"]
categories = ["hardware-support", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasonpeacock/ht16k33"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "jasonpeacock/ht16k33" }
is-it-maintained-open-issues = { repository = "jasonpeacock/ht16k33" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "jasonpeacock/ht16k33", branch = "master" }

[features]
default = ["std"]
std = []

[dependencies]
bitflags           = "1.0"
embedded-hal       = "0.2"
num_enum           = "0.5.1"
serde              = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
failure            = "0.1"
embedded-hal-mock  = "0.4"
version-sync       = "0.6"
